rename about pages routes, add mail to home and about main page

--- a/views/aboutPages/aboutMain.css
+++ b/views/aboutPages/aboutMain.css
@@ -81,7 +81,8 @@ a:active {
 }
 
 .address,
-.phone {
+.phone,
+.mail {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -99,7 +100,8 @@ a:active {
 }
 
 .address-text,
-.phone-text {
+.phone-text,
+.mail-text {
   display: flex;
   flex-direction: column;
   font-size: 14px;
