--- a/views/contactPages/contactMain.html
+++ b/views/contactPages/contactMain.html
@@ -65,7 +65,7 @@
         >
 
         <a
-          href="/aboutPage"
+          href="/aboutMain"
           id="about"
           title="Giới thiệu về Công ty Kỳ Long - Chuyên gia khí đốt"
           >GIỚI THIỆU</a
@@ -210,23 +210,23 @@
           <h4>Về Kỳ Long</h4>
           <ul>
             <li>
-              <a href="/aboutPage#gioi-thieu" title="Giới thiệu về Kỳ Long"
+              <a href="/aboutMain#gioi-thieu" title="Giới thiệu về Kỳ Long"
                 >Giới thiệu</a
               >
             </li>
             <li>
-              <a href="/aboutPage#thi-phan" title="Thị phần của Kỳ Long"
+              <a href="/aboutMain#thi-phan" title="Thị phần của Kỳ Long"
                 >Thị phần</a
               >
             </li>
             <li>
-              <a href="/aboutPage#tam-nhin" title="Tầm nhìn của Kỳ Long"
+              <a href="/aboutMain#tam-nhin" title="Tầm nhìn của Kỳ Long"
                 >Tầm nhìn</a
               >
             </li>
             <li>
               <a
-                href="/aboutPage#loi-the"
+                href="/aboutMain#loi-the"
                 title="Lợi thế cạnh tranh của Kỳ Long"
                 >Lợi thế cạnh tranh</a
               >
