--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -45,7 +45,20 @@
           </div>
           <div class="phone-text">
             <div>Số điện thoại</div>
-            <div>Chưa áp dụng</div>
+            <a href="tel:+84 96 227 7912" title="Gọi cho Kỳ Long"
+              >+84 96 227 7912</a
+            >
+          </div>
+        </div>
+        <div class="mail">
+          <div class="icon">
+            <i>📧</i>
+          </div>
+          <div class="mail-text">
+            <div>Email:</div>
+            <a href="mailto:info@kylong.com.vn" title="Gửi email cho Kỳ Long"
+              >info@kylong.com.vn</a
+            >
           </div>
         </div>
       </div>
@@ -61,7 +74,7 @@
         >
 
         <a
-          href="/aboutPage"
+          href="/aboutMain"
           id="about"
           title="Giới thiệu về Công ty Kỳ Long - Chuyên gia khí đốt"
           >GIỚI THIỆU</a
@@ -168,7 +181,7 @@
           <p>
             Chào mừng bạn đến với
             <a
-              href="/aboutPage"
+              href="/aboutMain"
               title="Công ty Kỳ Long - Nhà cung cấp khí đốt công nghiệp"
               >Công ty KỲ LONG</a
             >, một công ty năng lượng uy tín có nhiều kinh nghiệm trong công
@@ -688,23 +701,23 @@
           <h4>Về Kỳ Long</h4>
           <ul>
             <li>
-              <a href="/aboutPage#gioi-thieu" title="Giới thiệu về Kỳ Long"
+              <a href="/aboutMain#gioi-thieu" title="Giới thiệu về Kỳ Long"
                 >Giới thiệu</a
               >
             </li>
             <li>
-              <a href="/aboutPage#thi-phan" title="Thị phần của Kỳ Long"
+              <a href="/aboutMain#thi-phan" title="Thị phần của Kỳ Long"
                 >Thị phần</a
               >
             </li>
             <li>
-              <a href="/aboutPage#tam-nhin" title="Tầm nhìn của Kỳ Long"
+              <a href="/aboutMain#tam-nhin" title="Tầm nhìn của Kỳ Long"
                 >Tầm nhìn</a
               >
             </li>
             <li>
               <a
-                href="/aboutPage#loi-the"
+                href="/aboutMain#loi-the"
                 title="Lợi thế cạnh tranh của Kỳ Long"
                 >Lợi thế cạnh tranh</a
               >
@@ -781,12 +794,14 @@
           <p>81-83 Nguyễn Hữu Cầu, Phường Tân Định, Quận 1, TP. Hồ Chí Minh</p>
           <p>
             Điện thoại:
-            <a href="tel:Chưa áp dụng" title="Gọi cho Kỳ Long">Chưa áp dụng</a>
+            <a href="tel:+84 96 227 7912" title="Gọi cho Kỳ Long"
+              >+84 96 227 7912</a
+            >
           </p>
           <p>
             Email:
-            <a href="mailto:Chưa áp dụng" title="Gửi email cho Kỳ Long"
-              >Chưa áp dụng</a
+            <a href="mailto:info@kylong.com.vn" title="Gửi email cho Kỳ Long"
+              >info@kylong.com.vn</a
             >
           </p>
         </div>
