--- a/views/newsPages/newsMain/newsMain.html
+++ b/views/newsPages/newsMain/newsMain.html
@@ -62,7 +62,7 @@
           >TRANG CHỦ</a
         >
         <a
-          href="/aboutPage"
+          href="/aboutMain"
           id="about"
           title="Giới thiệu về Công ty Kỳ Long - Chuyên gia khí đốt"
           >GIỚI THIỆU</a
@@ -285,15 +285,15 @@
           <h4>Về Kỳ Long</h4>
           <ul>
             <li>
-              <a href="/aboutPage" title="Giới thiệu về Kỳ Long">Giới thiệu</a>
+              <a href="/aboutMain" title="Giới thiệu về Kỳ Long">Giới thiệu</a>
             </li>
             <li>
-              <a href="/aboutPage#doi-ky-su" title="Đội ngũ kỹ sư Kỳ Long"
+              <a href="/aboutMain#doi-ky-su" title="Đội ngũ kỹ sư Kỳ Long"
                 >Đội ngũ</a
               >
             </li>
             <li>
-              <a href="/aboutPage#cong-nghe" title="Công nghệ Kỳ Long"
+              <a href="/aboutMain#cong-nghe" title="Công nghệ Kỳ Long"
                 >Công nghệ</a
               >
             </li>
