--- a/views/aboutPages/aboutMain.html
+++ b/views/aboutPages/aboutMain.html
@@ -1,4 +1,4 @@
-<!-- views/aboutPage/aboutMain.html -->
+<!-- views/aboutPages/aboutMain.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -48,7 +48,20 @@
           </div>
           <div class="phone-text">
             <div>Số điện thoại</div>
-            <div>Chưa áp dụng</div>
+            <a href="tel:+84 96 227 7912" title="Gọi cho Kỳ Long"
+              >+84 96 227 7912</a
+            >
+          </div>
+        </div>
+        <div class="mail">
+          <div class="icon">
+            <i>📧</i>
+          </div>
+          <div class="mail-text">
+            <div>Email:</div>
+            <a href="mailto:info@kylong.com.vn" title="Gửi email cho Kỳ Long"
+              >info@kylong.com.vn</a
+            >
           </div>
         </div>
       </div>
@@ -65,7 +78,7 @@
         </li>
         <li>
           <a
-            href="/aboutPage"
+            href="/aboutMain"
             id="about"
             title="Giới thiệu về Công ty Kỳ Long - Chuyên gia khí đốt"
             >GIỚI THIỆU</a
@@ -336,23 +349,23 @@
           <h4>Về Kỳ Long</h4>
           <ul>
             <li>
-              <a href="/aboutPage#gioi-thieu" title="Giới thiệu về Kỳ Long"
+              <a href="/aboutMain#gioi-thieu" title="Giới thiệu về Kỳ Long"
                 >Giới thiệu</a
               >
             </li>
             <li>
-              <a href="/aboutPage#thi-phan" title="Thị phần của Kỳ Long"
+              <a href="/aboutMain#thi-phan" title="Thị phần của Kỳ Long"
                 >Thị phần</a
               >
             </li>
             <li>
-              <a href="/aboutPage#tam-nhin" title="Tầm nhìn của Kỳ Long"
+              <a href="/aboutMain#tam-nhin" title="Tầm nhìn của Kỳ Long"
                 >Tầm nhìn</a
               >
             </li>
             <li>
               <a
-                href="/aboutPage#loi-the"
+                href="/aboutMain#loi-the"
                 title="Lợi thế cạnh tranh của Kỳ Long"
                 >Lợi thế cạnh tranh</a
               >
@@ -426,12 +439,14 @@
           <p>81-83 Nguyễn Hữu Cầu, Phường Tân Định, Quận 1, TP. Hồ Chí Minh</p>
           <p>
             Điện thoại:
-            <a href="tel:Chưa áp dụng" title="Gọi cho Kỳ Long">Chưa áp dụng</a>
+            <a href="tel:+84 96 227 7912" title="Gọi cho Kỳ Long"
+              >+84 96 227 7912</a
+            >
           </p>
           <p>
             Email:
-            <a href="mailto:Chưa áp dụng" title="Gửi email cho Kỳ Long"
-              >Chưa áp dụng</a
+            <a href="mailto:info@kylong.com.vn" title="Gửi email cho Kỳ Long"
+              >info@kylong.com.vn</a
             >
           </p>
         </div>
