--- a/views/servicePages/serviceMain.css
+++ b/views/servicePages/serviceMain.css
@@ -9,7 +9,6 @@
 
 body {
   color: #333;
-  line-height: 1.6;
 }
 
 a {
@@ -17,15 +16,18 @@ a {
   color: inherit;
 }
 
+/* Ensure visited links don't turn purple */
 a:visited {
   color: inherit;
 }
 
+/* Optional: Keep hover state consistent */
 a:hover {
   text-decoration: none;
   color: inherit;
 }
 
+/* Optional: Keep active state consistent */
 a:active {
   color: inherit;
 }
