--- a/views/components/footer/footer.html
+++ b/views/components/footer/footer.html
@@ -1,3 +1,4 @@
+<!-- views\components\footer\footer.html -->
 <footer class="footer">
   <div class="footer-container">
     <div class="footer-column">
