--- a/views/components/header/header.html
+++ b/views/components/header/header.html
@@ -1,3 +1,4 @@
+<!-- views\components\header\header.html -->
 <header class="header">
   <div class="logo-container">
     <img src="homePages/images/logo.png" alt="Ky Long Logo" class="logo" />
