make header load faster

--- a/views/components/header/header.html
+++ b/views/components/header/header.html
@@ -1,7 +1,11 @@
 <!-- views\components\header\header.html -->
 <header class="header">
   <div class="logo-container">
-    <img src="homePages/images/logo.png" alt="Ky Long Logo" class="logo" />
+    <img
+      src="https://i.imgur.com/Gt4lxV2.png"
+      alt="Ky Long Logo"
+      class="logo"
+    />
     <div class="company-info">
       <div class="company-name">
         <a href="/" title="Công ty TNHH Đầu Tư Thương Mại Dịch Vụ Kỳ Long"
