--- a/views/components/header/header.css
+++ b/views/components/header/header.css
@@ -76,7 +76,7 @@
 }
 
 .nav-menu a {
-  color: white;
+  color: #000000; /* Explicitly setting the text color to black */
   text-decoration: none;
   font-weight: bold;
   font-size: 18px;
@@ -85,7 +85,7 @@
 
 .nav-menu a:hover,
 .nav-menu a.active {
-  color: #e84e0f;
+  color: #e84e0f; /* Color changes to orange on hover or when active */
 }
 
 .nav-menu a.active {
