--- a/views/newsPages/newsMain/newsMain.html
+++ b/views/newsPages/newsMain/newsMain.html
@@ -9,7 +9,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-
+    <link
+      rel="preload"
+      href="components/header/header.html"
+      as="fetch"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="components/header/header.css" />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="newsPages/newsMain/newsMain.css" />
