--- a/views/contactPages/contactMain.html
+++ b/views/contactPages/contactMain.html
@@ -36,7 +36,7 @@
             <div class="form-progress-bar"></div>
           </div>
 
-          <form action="#" method="POST" id="contactForm">
+          <form action="/submit" method="POST" id="contactForm">
             <div class="form-group">
               <label for="name" class="required">Họ và tên</label>
               <input
@@ -91,6 +91,9 @@
 
             <button type="submit" class="submit-button">Gửi tin nhắn</button>
           </form>
+
+          <!-- Container for success/error messages -->
+          <div id="form-messages"></div>
         </div>
 
         <div class="contact-details">
