rewrite footer to match new about, services and products

--- a/views/components/footer/footer.html
+++ b/views/components/footer/footer.html
@@ -10,18 +10,24 @@
           >
         </li>
         <li>
-          <a href="/aboutMain#thi-phan" title="Thị phần của Kỳ Long"
-            >Thị phần</a
+          <a
+            href="/aboutMain#lich-su-phat-trien"
+            title="Lịch sử phát triển của Kỳ Long"
+            >Lịch sử</a
           >
         </li>
         <li>
-          <a href="/aboutMain#tam-nhin" title="Tầm nhìn của Kỳ Long"
-            >Tầm nhìn</a
+          <a
+            href="/aboutMain#van-hoa-doanh-nghiep"
+            title="Văn hóa doanh nghiệp của Kỳ Long"
+            >Văn hóa</a
           >
         </li>
         <li>
-          <a href="/aboutMain#loi-the" title="Lợi thế cạnh tranh của Kỳ Long"
-            >Lợi thế cạnh tranh</a
+          <a
+            href="/aboutMain#doi-ngu-quan-ly"
+            title="Đội ngũ quản lý của Kỳ Long"
+            >Đội ngũ</a
           >
         </li>
       </ul>
@@ -30,26 +36,15 @@
       <h4>Sản phẩm</h4>
       <ul>
         <li>
-          <a
-            href="/productMain#nhien-lieu"
-            title="Nhiên liệu công nghiệp Kỳ Long"
-            >Nhiên liệu</a
+          <a href="/productMain#production" title="Sản xuất Kỳ Long"
+            >Sản xuất</a
           >
         </li>
         <li>
-          <a href="/productMain#thiet-bi" title="Thiết bị công nghiệp Kỳ Long"
-            >Thiết bị</a
-          >
+          <a href="/productMain#wholesale" title="Bán buôn Kỳ Long">Bán buôn</a>
         </li>
         <li>
-          <a href="/productMain#che-tao" title="Sản phẩm chế tạo Kỳ Long"
-            >Chế tạo</a
-          >
-        </li>
-        <li>
-          <a href="/productMain#phu-kien" title="Phụ kiện công nghiệp Kỳ Long"
-            >Phụ kiện</a
-          >
+          <a href="/productMain#retail" title="Bán lẻ Kỳ Long">Bán lẻ</a>
         </li>
       </ul>
     </div>
@@ -57,27 +52,33 @@
       <h4>Dịch vụ</h4>
       <ul>
         <li>
-          <a href="/serviceMain#tu-van" title="Tư vấn giải pháp khí đốt Kỳ Long"
+          <a href="/serviceMain#sua-chua" title="Sửa chữa Kỳ Long">Sửa chữa</a>
+        </li>
+        <li>
+          <a href="/serviceMain#cho-thue" title="Cho thuê Kỳ Long">Cho thuê</a>
+        </li>
+        <li>
+          <a
+            href="/serviceMain#van-tai"
+            title="Vận tải và hỗ trợ vận tải Kỳ Long"
+            >Vận tải</a
+          >
+        </li>
+        <li>
+          <a href="/serviceMain#cong-nghe" title="Công nghệ thông tin Kỳ Long"
+            >Công nghệ</a
+          >
+        </li>
+        <li>
+          <a
+            href="/serviceMain#tu-van"
+            title="Tư vấn, nghiên cứu và khoa học Kỳ Long"
             >Tư vấn</a
           >
         </li>
         <li>
-          <a
-            href="/serviceMain#lap-dat"
-            title="Lắp đặt hệ thống khí đốt Kỳ Long"
-            >Lắp đặt</a
-          >
-        </li>
-        <li>
-          <a
-            href="/serviceMain#bao-tri"
-            title="Bảo trì hệ thống khí đốt Kỳ Long"
-            >Bảo trì</a
-          >
-        </li>
-        <li>
-          <a href="/serviceMain#van-tai" title="Vận tải nhiên liệu Kỳ Long"
-            >Vận tải</a
+          <a href="/serviceMain#xay-dung" title="Xây dựng và Lắp đặt Kỳ Long"
+            >Xây dựng</a
           >
         </li>
       </ul>
