--- a/views/servicePages/serviceMain.html
+++ b/views/servicePages/serviceMain.html
@@ -46,7 +46,7 @@
             <h3>Sửa chữa</h3>
             <div class="service-list">
               <div class="service-item">
-                <h4>3312 - Sửa chữa máy móc, thiết bị</h4>
+                <h4>Sửa chữa máy móc, thiết bị</h4>
                 <p>
                   Dịch vụ sửa chữa chuyên nghiệp cho hệ thống máy móc công
                   nghiệp
@@ -63,11 +63,11 @@
             <h3>Cho thuê</h3>
             <div class="service-list">
               <div class="service-item">
-                <h4>7710 - Cho thuê xe có động cơ</h4>
+                <h4>Cho thuê xe có động cơ</h4>
                 <p>Dịch vụ cho thuê xe chất lượng cao</p>
               </div>
               <div class="service-item">
-                <h4>7730 - Cho thuê máy móc, thiết bị</h4>
+                <h4>Cho thuê máy móc, thiết bị</h4>
                 <p>Cho thuê máy móc xây dựng, văn phòng</p>
               </div>
             </div>
@@ -81,15 +81,15 @@
             <h3>Vận tải & Hỗ trợ vận tải</h3>
             <div class="service-list">
               <div class="service-item">
-                <h4>4932 - Vận tải hành khách đường bộ khác</h4>
+                <h4>Vận tải hành khách đường bộ khác</h4>
                 <p>Dịch vụ vận tải hành khách chuyên nghiệp</p>
               </div>
               <div class="service-item">
-                <h4>4933 - Vận tải hàng hóa bằng đường bộ</h4>
+                <h4>Vận tải hàng hóa bằng đường bộ</h4>
                 <p>Vận chuyển hàng hóa an toàn, đúng tiến độ</p>
               </div>
               <div class="service-item">
-                <h4>5229 - Hoạt động dịch vụ hỗ trợ vận tải</h4>
+                <h4>Hoạt động dịch vụ hỗ trợ vận tải</h4>
                 <p>Các dịch vụ hỗ trợ logistics chuyên nghiệp</p>
               </div>
             </div>
@@ -103,15 +103,15 @@
             <h3>Công nghệ thông tin</h3>
             <div class="service-list">
               <div class="service-item">
-                <h4>6201 - Lập trình máy vi tính</h4>
+                <h4>Lập trình máy vi tính</h4>
                 <p>Phát triển phần mềm theo yêu cầu</p>
               </div>
               <div class="service-item">
-                <h4>6202 - Tư vấn và quản trị hệ thống</h4>
+                <h4>Tư vấn và quản trị hệ thống</h4>
                 <p>Tư vấn và triển khai hệ thống CNTT</p>
               </div>
               <div class="service-item">
-                <h4>6209 - Dịch vụ công nghệ thông tin khác</h4>
+                <h4>Dịch vụ công nghệ thông tin khác</h4>
                 <p>Các giải pháp CNTT toàn diện</p>
               </div>
             </div>
@@ -125,23 +125,23 @@
             <h3>Tư vấn, nghiên cứu & khoa học</h3>
             <div class="service-list">
               <div class="service-item">
-                <h4>6619 - Tư vấn đầu tư</h4>
+                <h4>Tư vấn đầu tư</h4>
                 <p>Tư vấn chiến lược đầu tư hiệu quả</p>
               </div>
               <div class="service-item">
-                <h4>7020 - Tư vấn quản lý</h4>
+                <h4>Tư vấn quản lý</h4>
                 <p>Giải pháp quản lý doanh nghiệp tối ưu</p>
               </div>
               <div class="service-item">
-                <h4>7110 - Tư vấn kỹ thuật & giám sát</h4>
+                <h4>Tư vấn kỹ thuật & giám sát</h4>
                 <p>Giám sát thi công công trình dân dụng và công nghiệp</p>
               </div>
               <div class="service-item">
-                <h4>7211-7212 - Nghiên cứu khoa học</h4>
+                <h4>Nghiên cứu khoa học</h4>
                 <p>Nghiên cứu phát triển công nghệ mới</p>
               </div>
               <div class="service-item">
-                <h4>7490 - Tư vấn chuyên ngành khác</h4>
+                <h4>Tư vấn chuyên ngành khác</h4>
                 <p>Tư vấn nông học, môi trường và công nghệ</p>
               </div>
             </div>
@@ -155,23 +155,23 @@
             <h3>Xây dựng & Lắp đặt</h3>
             <div class="service-list">
               <div class="service-item">
-                <h4>4101 - Xây dựng nhà để ở</h4>
+                <h4>Xây dựng nhà để ở</h4>
                 <p>Thi công các công trình dân dụng chất lượng cao</p>
               </div>
               <div class="service-item">
-                <h4>4102 - Xây dựng nhà không để ở</h4>
+                <h4>Xây dựng nhà không để ở</h4>
                 <p>Xây dựng nhà xưởng, kho bãi công nghiệp</p>
               </div>
               <div class="service-item">
-                <h4>4299 - Xây dựng công trình kỹ thuật dân dụng khác</h4>
+                <h4>Xây dựng công trình kỹ thuật dân dụng khác</h4>
                 <p>Thi công các công trình kỹ thuật đặc biệt</p>
               </div>
               <div class="service-item">
-                <h4>4321 - Lắp đặt hệ thống điện</h4>
+                <h4>Lắp đặt hệ thống điện</h4>
                 <p>Lắp đặt hệ thống điện công nghiệp và dân dụng</p>
               </div>
               <div class="service-item">
-                <h4>4322 - Lắp đặt hệ thống cấp, thoát nước</h4>
+                <h4>Lắp đặt hệ thống cấp, thoát nước</h4>
                 <p>Thi công hệ thống cấp thoát nước chuyên nghiệp</p>
               </div>
             </div>
